--- a/notebooks/un_data_eploratory.ipynb
+++ b/notebooks/un_data_eploratory.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -54,45 +54,45 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>1734.723214</td>\n",
+       "      <td>6723</td>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>2736.486436</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>1758.465636</td>\n",
+       "      <td>6724</td>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>1994</td>\n",
+       "      <td>2768.309953</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>1757.023490</td>\n",
+       "      <td>6725</td>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>1993</td>\n",
+       "      <td>2572.870395</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>1766.593077</td>\n",
+       "      <td>6726</td>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>1992</td>\n",
+       "      <td>2591.007534</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>2014</td>\n",
-       "      <td>1795.735834</td>\n",
+       "      <td>6727</td>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>1991</td>\n",
+       "      <td>2906.272849</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>5</td>\n",
-       "      <td>Afghanistan</td>\n",
-       "      <td>2013</td>\n",
-       "      <td>1807.762344</td>\n",
+       "      <td>6728</td>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>1990</td>\n",
+       "      <td>2819.549467</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -100,23 +100,23 @@
        "</div>"
       ],
       "text/plain": [
-       "  Country or Area  Year        Value  Value Footnotes\n",
-       "0     Afghanistan  2018  1734.723214              NaN\n",
-       "1     Afghanistan  2017  1758.465636              NaN\n",
-       "2     Afghanistan  2016  1757.023490              NaN\n",
-       "3     Afghanistan  2015  1766.593077              NaN\n",
-       "4     Afghanistan  2014  1795.735834              NaN\n",
-       "5     Afghanistan  2013  1807.762344              NaN"
+       "     Country or Area  Year        Value  Value Footnotes\n",
+       "6723        Zimbabwe  1995  2736.486436              NaN\n",
+       "6724        Zimbabwe  1994  2768.309953              NaN\n",
+       "6725        Zimbabwe  1993  2572.870395              NaN\n",
+       "6726        Zimbabwe  1992  2591.007534              NaN\n",
+       "6727        Zimbabwe  1991  2906.272849              NaN\n",
+       "6728        Zimbabwe  1990  2819.549467              NaN"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "gdp_df = pd.read_csv('C:/Users/ben/Documents/Data_Analytics/projects/Python/gdp-and-internet-usage-bensdata/data/gdp_percapita.csv')\n",
-    "gdp_df.head(6)"
+    "gdp_df = pd.read_csv('../data/gdp_percapita.csv',nrows=6729)\n",
+    "gdp_df.tail(6)"
    ]
   },
   {
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -215,13 +215,13 @@
        "5     Afghanistan  2009  3.550000              NaN"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "internet_df = pd.read_csv('C:/Users/ben/Documents/Data_Analytics/projects/Python/gdp-and-internet-usage-bensdata/data/internet_use.csv', nrows=4496)\n",
+    "internet_df = pd.read_csv('../data/internet_use.csv', nrows=4496)\n",
     "#limited rows to 4496 with nrow=\n",
     "internet_df.head(6)"
    ]
@@ -235,16 +235,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(6731, 4)"
+       "(6729, 4)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
        "(4496, 4)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,20 +282,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Country or Area     object\n",
-       "Year                object\n",
+       "Year                 int64\n",
        "Value              float64\n",
        "Value Footnotes    float64\n",
        "dtype: object"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +319,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +346,7 @@
        "dtype('float64')"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +366,7 @@
        "pandas.core.series.Series"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -415,6 +415,20 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>6719</td>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>1999</td>\n",
+       "      <td>3054.064189</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>6720</td>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>1998</td>\n",
+       "      <td>3099.076182</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
        "    <tr>\n",
        "      <td>6721</td>\n",
        "      <td>Zimbabwe</td>\n",
@@ -471,51 +485,25 @@
        "      <td>2819.549467</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <td>6729</td>\n",
-       "      <td>footnoteSeqID</td>\n",
-       "      <td>Footnote</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>6730</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Excludes South Sudan after July 9, 2011.</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Country or Area                                      Year        Value  \\\n",
-       "6721        Zimbabwe                                      1997  3036.422224   \n",
-       "6722        Zimbabwe                                      1996  2985.856605   \n",
-       "6723        Zimbabwe                                      1995  2736.486436   \n",
-       "6724        Zimbabwe                                      1994  2768.309953   \n",
-       "6725        Zimbabwe                                      1993  2572.870395   \n",
-       "6726        Zimbabwe                                      1992  2591.007534   \n",
-       "6727        Zimbabwe                                      1991  2906.272849   \n",
-       "6728        Zimbabwe                                      1990  2819.549467   \n",
-       "6729   footnoteSeqID                                  Footnote          NaN   \n",
-       "6730               2  Excludes South Sudan after July 9, 2011.          NaN   \n",
-       "\n",
-       "      Value Footnotes  \n",
-       "6721              NaN  \n",
-       "6722              NaN  \n",
-       "6723              NaN  \n",
-       "6724              NaN  \n",
-       "6725              NaN  \n",
-       "6726              NaN  \n",
-       "6727              NaN  \n",
-       "6728              NaN  \n",
-       "6729              NaN  \n",
-       "6730              NaN  "
+       "     Country or Area  Year        Value  Value Footnotes\n",
+       "6719        Zimbabwe  1999  3054.064189              NaN\n",
+       "6720        Zimbabwe  1998  3099.076182              NaN\n",
+       "6721        Zimbabwe  1997  3036.422224              NaN\n",
+       "6722        Zimbabwe  1996  2985.856605              NaN\n",
+       "6723        Zimbabwe  1995  2736.486436              NaN\n",
+       "6724        Zimbabwe  1994  2768.309953              NaN\n",
+       "6725        Zimbabwe  1993  2572.870395              NaN\n",
+       "6726        Zimbabwe  1992  2591.007534              NaN\n",
+       "6727        Zimbabwe  1991  2906.272849              NaN\n",
+       "6728        Zimbabwe  1990  2819.549467              NaN"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -645,7 +633,7 @@
        "4495   footnoteSeqID  Footnote       NaN              NaN"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -664,7 +652,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.frame.DataFrame"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(gdp_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdp_df = gdp_df.drop(columns = ['Value Footnotes'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "internet_df = internet_df.drop(columns = ['Value Footnotes'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Q11: Change the columns for the GDP Per Capita data frame to ‘Country’, ‘Year’, and ‘GDP_Per_Capita’."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -688,9 +721,9 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Country or Area</th>\n",
+       "      <th>Country</th>\n",
        "      <th>Year</th>\n",
-       "      <th>Value</th>\n",
+       "      <th>GDP_Per_Capita</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -731,6 +764,18 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <td>6724</td>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>1994</td>\n",
+       "      <td>2768.309953</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>6725</td>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>1993</td>\n",
+       "      <td>2572.870395</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <td>6726</td>\n",
        "      <td>Zimbabwe</td>\n",
        "      <td>1992</td>\n",
@@ -748,52 +793,47 @@
        "      <td>1990</td>\n",
        "      <td>2819.549467</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <td>6729</td>\n",
-       "      <td>footnoteSeqID</td>\n",
-       "      <td>Footnote</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>6730</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Excludes South Sudan after July 9, 2011.</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>6731 rows × 3 columns</p>\n",
+       "<p>6729 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Country or Area                                      Year        Value\n",
-       "0        Afghanistan                                      2018  1734.723214\n",
-       "1        Afghanistan                                      2017  1758.465636\n",
-       "2        Afghanistan                                      2016  1757.023490\n",
-       "3        Afghanistan                                      2015  1766.593077\n",
-       "4        Afghanistan                                      2014  1795.735834\n",
-       "...              ...                                       ...          ...\n",
-       "6726        Zimbabwe                                      1992  2591.007534\n",
-       "6727        Zimbabwe                                      1991  2906.272849\n",
-       "6728        Zimbabwe                                      1990  2819.549467\n",
-       "6729   footnoteSeqID                                  Footnote          NaN\n",
-       "6730               2  Excludes South Sudan after July 9, 2011.          NaN\n",
+       "          Country  Year  GDP_Per_Capita\n",
+       "0     Afghanistan  2018     1734.723214\n",
+       "1     Afghanistan  2017     1758.465636\n",
+       "2     Afghanistan  2016     1757.023490\n",
+       "3     Afghanistan  2015     1766.593077\n",
+       "4     Afghanistan  2014     1795.735834\n",
+       "...           ...   ...             ...\n",
+       "6724     Zimbabwe  1994     2768.309953\n",
+       "6725     Zimbabwe  1993     2572.870395\n",
+       "6726     Zimbabwe  1992     2591.007534\n",
+       "6727     Zimbabwe  1991     2906.272849\n",
+       "6728     Zimbabwe  1990     2819.549467\n",
        "\n",
-       "[6731 rows x 3 columns]"
+       "[6729 rows x 3 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "gdp_df.drop(columns = ['Value Footnotes'])"
+    "gdp_df.rename(columns = {'Country or Area': 'Country', 'Value': 'GDP_Per_Capita'})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Q12: Change the columns for the Internet Users data frame to ‘Country’, ‘Year’, and ‘Internet_Users_Pct’."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -817,9 +857,9 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Country or Area</th>\n",
+       "      <th>Country</th>\n",
        "      <th>Year</th>\n",
-       "      <th>Value</th>\n",
+       "      <th>Internet_Users_Pct</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -853,71 +893,27 @@
        "      <td>2010</td>\n",
        "      <td>4.000000</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4491</td>\n",
-       "      <td>Zimbabwe</td>\n",
-       "      <td>1996</td>\n",
-       "      <td>0.016790</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4492</td>\n",
-       "      <td>Zimbabwe</td>\n",
-       "      <td>1995</td>\n",
-       "      <td>0.007684</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4493</td>\n",
-       "      <td>Zimbabwe</td>\n",
-       "      <td>1994</td>\n",
-       "      <td>0.001739</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4494</td>\n",
-       "      <td>Zimbabwe</td>\n",
-       "      <td>1990</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4495</td>\n",
-       "      <td>footnoteSeqID</td>\n",
-       "      <td>Footnote</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>4496 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Country or Area      Year     Value\n",
-       "0        Afghanistan      2014  6.390000\n",
-       "1        Afghanistan      2013  5.900000\n",
-       "2        Afghanistan      2012  5.454545\n",
-       "3        Afghanistan      2011  5.000000\n",
-       "4        Afghanistan      2010  4.000000\n",
-       "...              ...       ...       ...\n",
-       "4491        Zimbabwe      1996  0.016790\n",
-       "4492        Zimbabwe      1995  0.007684\n",
-       "4493        Zimbabwe      1994  0.001739\n",
-       "4494        Zimbabwe      1990  0.000000\n",
-       "4495   footnoteSeqID  Footnote       NaN\n",
-       "\n",
-       "[4496 rows x 3 columns]"
+       "       Country  Year  Internet_Users_Pct\n",
+       "0  Afghanistan  2014            6.390000\n",
+       "1  Afghanistan  2013            5.900000\n",
+       "2  Afghanistan  2012            5.454545\n",
+       "3  Afghanistan  2011            5.000000\n",
+       "4  Afghanistan  2010            4.000000"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "internet_df.drop(columns = ['Value Footnotes'])"
+    "internet_df.columns = ['Country','Year','Internet_Users_Pct']\n",
+    "internet_df.head()"
    ]
   },
   {
